<resources>
    <string name="app_name">Grub Point</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="full_name">Full Name</string>
    <string name="number">Number</string>
    <string name="user_setup">USER SETUP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="save_account_settings">Save Account Settings</string>
    <string name="menu">Menu</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="checkout">Checkout</string>
    <string name="please_wait">Please Wait</string>
    <string name="your_transaction_is_being_processed">Your Transaction Is Being Processed</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="my_profile">MyProfile</string>
    <string name="faq">FAQ</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_food_menu_navigation_drawer">FoodMenuNavigationDrawerActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="order_history">Order History</string>
    <string name="Feedback">Feedback</string>
</resources>
