<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_layout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:counterEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/register_password_layout"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/register_email_layout"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/register_confirm_password_layout"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_confirm_password_layout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/register_password_layout"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:counterEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/create_new_account_btn"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_confirm_password_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.button.MaterialButton
        android:id="@+id/create_new_account_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTintMode="multiply"
        android:padding="12dp"
        android:text="@string/create_new_account"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="4dp"
        app:rippleColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/already_have_account_btn"
        app:layout_constraintTop_toBottomOf="@id/register_confirm_password_layout"
        />


    <android.support.design.button.MaterialButton
        android:id="@+id/already_have_account_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:backgroundTintMode="multiply"
        android:padding="12dp"
        android:text="@string/already_have_an_account"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="4dp"
        app:rippleColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_new_account_btn"
        />


</android.support.constraint.ConstraintLayout>